try other follow

--- a/index.html
+++ b/index.html
@@ -206,6 +206,8 @@
                   <div class="button" id="download-app1">
                     </div> <!-- end .button -->
                 <a href="https://twitter.com/menternships" class="btn btn-default custom-btn download-btn">
+                  <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
+                    </div> <!-- end .button -->
                   <i class="fa fa-twitter"></i>
                   @menternships
                 </a>
