--- a/index.html
+++ b/index.html
@@ -106,8 +106,8 @@
                       <h1>Create a Profile</h1>
                       <p>To show why you're an excellent coder to work with, connect your...
                       <ul class="list-item">
-                        <li><i class="fa fa-github"></i> Github.</li>
-                        <li><i class="fa fa-linkedin"></i> Linkedin.</li>
+                        <li><i class="fa fa-github"></i> Github</li>
+                        <li><i class="fa fa-linkedin"></i> Linkedin</li>
                         <li><i class="fa fa-medium"></i> Medium</li>
                       </ul>
                       </p>
@@ -134,7 +134,7 @@
               </div>
               <div class="col-sm-7 col-md-6">
                 <div class="content">
-                  <h1>Mentors Post Side Projects</h1>
+                  <h1>Post Side Projects</h1>
                   <p>Include the description of the side project, the description of the position, the languages used, and the number of internships available</p>
                 </div>
               </div>
@@ -147,8 +147,8 @@
   
                 <div class="col-sm-7 col-md-6">
                   <div class="content">
-                    <h1>Apply to internships, or manage applicants</h1>
-                    <p>Choose the side projects and mentors that best align with your career needs
+                    <h1>Manage applicants</h1>
+                    <p>Choose the interns that best match the skills needed for your side project.
                     </p>
                   </div> <!-- end .content -->
                 </div> <!-- .container> .row> .col-md-6 -->
@@ -174,7 +174,7 @@
             <div class="col-sm-7 col-md-6">
               <div class="content">
                 <h1>Onboard and collaborate</h1>
-                <p>Work with your mentor, build relationships, gain professional grade programming experience, or get your side projects moving</p>
+                <p>Onboard your interns with a strong onboarding packages, build relationships, and get your side projects moving</p>
               </div>
             </div>
           </div> <!-- .container> .row -->
@@ -205,7 +205,6 @@
               <div class="col-xs-12">
                 <a href="https://twitter.com/menternships" class="btn btn-default custom-btn download-btn">
                   <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
-                    </div> <!-- end .button -->
                   <i class="fa fa-twitter"></i>
                   @menternships
                 </a>
