--- a/index.html
+++ b/index.html
@@ -208,8 +208,13 @@
                   <i class="fa fa-twitter"></i>
                   @menternships
                 </a>
-              </div> <!-- end .download-area> .col-lg-3 (1) -->
-
+              </div>
+              <div class="col-xs-12">
+                  <a href="https://join.slack.com/t/menternship/shared_invite/MjQxODM1ODQ3NzE2LTE1MDU0ODI3MDQtNTM1MzlhMGYyOA" class="btn btn-default custom-btn download-btn">
+                    <i class="fa fa-slack"></i>
+                    Slack Channel
+                  </a>
+                </div>
             </div> <!-- end .container > .row/.download-area -->
 
           </div> <!-- end .container -->
