add slack channel at top

--- a/index.html
+++ b/index.html
@@ -54,6 +54,12 @@
                   <div class="button" id="download-app1">
                     <a href="https://twitter.com/menternships" class="twitter-follow-button" data-show-count="false">Follow @menternships</a><script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
                   </div> <!-- end .button -->
+                  <div>
+                    <a href="https://join.slack.com/t/menternship/shared_invite/MjQxODM1ODQ3NzE2LTE1MDU0ODI3MDQtNTM1MzlhMGYyOA" class="btn btn-default btn-xs">
+                      <i class="fa fa-slack"></i>
+                      Slack Channel
+                    </a>
+                  </div> <!-- end .button -->
                 </div> <!-- end .content -->
               </div> <!-- end .top > .container> .row> .col-md-7 -->
 
