add google analytics

--- a/index.html
+++ b/index.html
@@ -283,5 +283,14 @@
         jQuery("a[data-rel^='prettyPhoto']").prettyPhoto({social_tools:false});
       });
     </script>
+    <!-- Global Site Tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-106567509-1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments)};
+      gtag('js', new Date());
+
+      gtag('config', 'UA-106567509-1');
+    </script>
   </body>
 </html>
